--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-
-<html>
-<head>
-    <title>Resume</title>
-    <style>
-        .frame{
-        width: 100%;
-        height: 100%;
-    }
-    </style>
-</head>
-<body>
-    <iframe src="/resume.pdf" class="frame"></iframe>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.a17ef0b4.js"></script><link href="/static/css/main.8cad5cd5.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
