--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="hero-content">
             <h1>I am Anisha Ghosh<h1>
             <p class="hero-job"><span>Cybsersecurity Researcher, Specializing in Passwordless</span></p>
-            <p class="hero-job-desc">It usually is a race against time; secure before it's too late. </p>
+            <p class="hero-job-desc">It usually is a race against time; secure before it's too late. <br><a href="https://scholar.google.com/citations?user=cml-VC8AAAAJ">Google Scholar</a> </p>
 
         </div><!-- /.hero-content -->
 
