--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Anisha Ghosh - Cybersec Researcher</title>
+    <title>Anisha Ghosh</title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -57,8 +57,8 @@
         <!-- Name & Description -->
         <div class="hero-content">
             <h1>I am Anisha Ghosh<h1>
-            <p class="hero-job"><span>Cybsersecurity Researcher, Specializing in Passwordless</span></p>
-            <p class="hero-job-desc">It usually is a race against time; secure before it's too late. <br>
+            <p class="hero-job"><span>Software Developer, Cloud, Network and Cybsersecurity Specialist.</span></p>
+            <p class="hero-job-desc">Good software is a piece of art. Secure software makes the art valuable. <br>
 
 
 
@@ -153,10 +153,10 @@
                         </div><!-- /.main-service -->
 						<div class="main-service text-left">
 							<div class="rectangle">
-								<i class="fa fa-microchip" aria-hidden="true"></i>
+								<i class="fa fa-mobile" aria-hidden="true"></i>
 							</div><!-- /.rectangle -->
-							<h3>Internet of Things</h3>
-							<p>Experienced in working with the Internet of Things (IoT) to connect and manage a diverse range of devices and systems.</p>
+							<h3>Software Development</h3>
+							<p>Experienced in full-stack software development.</p>
 						</div><!-- /.main-service -->
 					</div>
 				</div>
@@ -208,10 +208,10 @@
                     <div class="col-sm-3 col-xs-6">
                         <div class="feature-about">
                             <div class="medium-rectangle rectangle">
-                                <i class="fa fa-microchip" aria-hidden="true"></i>
+                                <i class="fa fa-mobile" aria-hidden="true"></i>
                             </div><!-- /.rectangle -->
-                            <h3>IoT Engineer</h3>
-                            <p>Transforming industries with cutting-edge IoT solutions as a highly technical and innovative engineer.</p>
+                            <h3>Software Development Engineer</h3>
+                            <p>Transforming industries with cutting-edge Full-stack software development.</p>
                         </div><!-- /.feature-about -->
                     </div>
                 </div>
