--- a/index.html
+++ b/index.html
@@ -498,6 +498,18 @@
                             </div><!-- /.review-author -->
                         </div><!-- /.review -->
 
+			     <!-- Review 1 -->
+                        <div class="review">
+                            <div class="rectangle">
+                                <img src="assets/img/arxiv.jpg" class="img-res" alt="">
+                            </div>
+                            <p>Mitra, A., Ghosh, A., & Sethuraman, S. C. (2023). TUSH-Key: Transferable User Secrets on Hardware Key. arXiv preprint arXiv:2307.07484.</p>
+                            <div class="review-author">
+                                <h3>arXiv</h3>
+                                <h3><a href="https://doi.org/10.48550/arXiv.2307.07484" style="color: white;">DOI</a></h3>
+                            </div><!-- /.review-author -->
+                        </div><!-- /.review -->
+
                         
                     </div><!-- /.review-carousel -->
                 </div>
