--- a/Cert/index.html
+++ b/Cert/index.html
@@ -4,8 +4,8 @@
 	<center> 
 		<object data= 
 "Cert.pdf"
-				width="2800"
-				height="2500"> 
+				width=100%;
+				height=100%;
 		</object> 
 	</center> 
 </body> 
