--- a/Cert/index.html
+++ b/Cert/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html> 
 <html> 
-<body> 
-	<center> 
-		<object data= 
-"Cert.pdf"
-		
-				height=100%;
-		</object> 
-	</center> 
-</body> 
-
+<center> 
+	<object> data="Cert.pdf" height=100%;</object> 
+</center> 
 </html>
