--- a/Cert/index.html
+++ b/Cert/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html> 
 <center> 
-	<embed src="Cert.pdf" type="application/pdf" width="100%" height="600px" /> 
+	<embed src="Cert.pdf" type="application/pdf" width="100%" height="100%" /> 
 </center> 
 </html>
