--- a/Cert/index.html
+++ b/Cert/index.html
@@ -1,6 +1,17 @@
-<!DOCTYPE html> 
-<html> 
-<center> 
-	<embed src="Cert.pdf" type="application/pdf" width="100%" height="1200px" /> 
-</center> 
+<!DOCTYPE html>
+<html>
+<head>
+        <style>
+        html, body, iframe {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="Cert.pdf" frameborder="0"></iframe>
+</body>
 </html>
